# ComfyUI-ComicOutline

./: README.md  __init__.py  pyproject.toml
nodes/: ComicOutlineDetect.py
